--- a/projeto2/.godot/editor/editor_layout.cfg
+++ b/projeto2/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn")
-current_scene="res://node_2d.tscn"
+open_scenes=PackedStringArray("res://qaa.tscn")
+current_scene="res://qaa.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -37,9 +37,9 @@ selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=0
+screen=1
 mode="maximized"
-position=Vector2i(0, 23)
+position=Vector2i(1080, 944)
 
 [ScriptEditor]
 
@@ -52,8 +52,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1458, 681, 1164, 695)
-floating_window_screen=0
+floating_window_rect=Rect2i(1458, 1076, 1164, 695)
+floating_window_screen=1
 
 [ShaderEditor]
 
